--- a/.autorc
+++ b/.autorc
@@ -14,7 +14,5 @@
       "title": "Dependency Updates"
     }
   },
-  "skipReleaseLabels": ["dependency-update"],
-  "githubApi": "https://github.intuit.com/api/v3",
-  "githubGraphqlApi": "https://github.intuit.com/api"
+  "skipReleaseLabels": ["dependency-update"]
 }
