--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,5 @@
 {
-  "packages": [
-    "examples/*",
-    "packages/*",
-    "plugins/*"
-  ],
-  "version": "0.3.5",
+  "packages": ["examples/*", "packages/*", "plugins/*"],
+  "version": "0.0.0",
   "npmClient": "yarn"
 }
