--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@proof/monorepo",
+  "name": "@proof-ui/monorepo",
   "version": "0.0.0",
   "private": true,
   "description": "Integration testing for storybook",
-  "repository": "https://github.intuit.com/design-systems/proof",
+  "repository": "https://github.com/intuit/proof",
   "main": "index.js",
   "scripts": {
     "clean": "rm -rf ./**/tsconfig.tsbuildinfo && rm -rf ./packages/*/dist/* && lerna clean -y",
@@ -13,9 +13,6 @@
     "lint": "xo"
   },
   "author": "Adam Dierkens <Adam_Dierkens@intuit.com>",
-  "publishConfig": {
-    "registry": "https://registry.npmjs.intuit.com"
-  },
   "license": "MIT",
   "workspaces": [
     "packages/*",
