--- a/packages/cli-plugin/package.json
+++ b/packages/cli-plugin/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@proof/cli-plugin",
-  "version": "0.3.5",
+  "name": "@proof-ui/cli-plugin",
+  "version": "0.0.0",
   "main": "dist/main.js",
   "license": "MIT",
   "scripts": {
