--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@proof/docs",
+  "name": "@proof-ui/docs",
   "private": true,
-  "version": "0.3.5",
+  "version": "0.0.0",
   "main": "dist/main.js",
   "license": "MIT",
   "repository": {
