--- a/plugins/accessibility/package.json
+++ b/plugins/accessibility/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@proof/a11y-plugin",
-  "version": "0.3.5",
+  "name": "@proof-ui/a11y-plugin",
+  "version": "0.0.0",
   "main": "dist/main.js",
   "license": "MIT",
   "scripts": {
@@ -11,10 +11,10 @@
     "axe-core": "3.1.2"
   },
   "peerDependencies": {
-    "@proof/core": "link:../../packages/core"
+    "@proof-ui/core": "link:../../packages/core"
   },
   "devDependencies": {
-    "@proof/core": "link:../../packages/core",
+    "@proof-ui/core": "link:../../packages/core",
     "typescript": "3.5.3"
   }
 }
