--- a/.autorc
+++ b/.autorc
@@ -1,11 +1,6 @@
 {
   "plugins": [
-    [
-      "npm",
-      {
-        "setRcToken": false
-      }
-    ],
+    "npm",
     "released"
   ],
   "labels": {
@@ -14,5 +9,7 @@
       "title": "Dependency Updates"
     }
   },
-  "skipReleaseLabels": ["dependency-update"]
+  "skipReleaseLabels": [
+    "dependency-update"
+  ]
 }
