--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -7,9 +7,12 @@
     "build": "tsc --build",
     "build:watch": "tsc --build --watch"
   },
+  "peerDependencies": {
+    "@storybook/core-events": "^5.2.1",
+    "@storybook/addons": "^5.2.1"
+  },
   "devDependencies": {
-    "@types/reach__router": "^1.2.4",
-    "@types/storybook__react": "^4.0.2",
+    "@types/webpack-env": "^1.14.0",
     "typescript": "3.5.3"
   }
 }
