--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -4,16 +4,6 @@
 
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src",
-    "composite": true
-  },
-
-  "references": [
-    { "path": "../logger" },
-    { "path": "../core" },
-    { "path": "../config" },
-    { "path": "../cli-plugin" },
-    { "path": "../../plugins/babel" },
-    { "path": "../../plugins/console" }
-  ]
+    "rootDir": "./src"
+  }
 }
