--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -6,17 +6,17 @@
   "license": "MIT",
   "scripts": {
     "start": "start-storybook -p 6006",
-    "test": "proof"
+    "test": "../../packages/cli/bin/proof.js"
   },
   "dependencies": {
-    "@proof-ui/a11y-plugin": "^0.0.0",
-    "@proof-ui/add-all-plugin": "^0.0.0",
-    "@proof-ui/applitools-plugin": "^0.0.0",
-    "@proof-ui/babel-plugin": "^0.0.0",
-    "@proof-ui/cli": "^0.0.0",
-    "@proof-ui/junit-plugin": "^0.0.0",
-    "@proof-ui/skip-tests-plugin": "^0.0.0",
-    "@proof-ui/storybook": "^0.0.0",
+    "@proof-ui/a11y-plugin": "link:../../plugins/accessibility",
+    "@proof-ui/add-all-plugin": "link:../../plugins/add-all",
+    "@proof-ui/applitools-plugin": "link:../../plugins/applitools",
+    "@proof-ui/babel-plugin": "link:../../plugins/babel",
+    "@proof-ui/cli": "link:../../packages/cli",
+    "@proof-ui/junit-plugin": "link:../../plugins/junit",
+    "@proof-ui/skip-tests-plugin": "link:../../plugins/skip-tests",
+    "@proof-ui/storybook": "link:../../packages/storybook",
     "power-assert": "^1.6.1"
   },
   "devDependencies": {
