--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "repository": "https://github.com/intuit/proof",
   "main": "index.js",
   "scripts": {
-    "clean": "rm -rf ./**/tsconfig.tsbuildinfo && rm -rf ./packages/*/dist/* && rm -rf ./plugins/*/dist/* && lerna clean -y",
+    "clean": "rm -rf ./packages/*/dist/* && rm -rf ./plugins/*/dist/* && lerna clean -y",
     "build": "lerna run build --stream",
     "build:watch": "lerna run build:watch --parallel",
     "test": "jest",
     "lint": "xo",
     "release": "auto shipit -w"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
   },
   "author": "Adam Dierkens <Adam_Dierkens@intuit.com>",
   "license": "MIT",
