--- a/packages/cli-plugin/package.json
+++ b/packages/cli-plugin/package.json
@@ -4,8 +4,8 @@
   "main": "dist/main.js",
   "license": "MIT",
   "scripts": {
-    "build": "tsc --build",
-    "build:watch": "tsc --build --watch"
+    "build": "tsc",
+    "build:watch": "tsc --watch"
   },
   "peerDependencies": {
     "command-line-application": "^0.1.8"
