--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -11,8 +11,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc --build",
-    "build:watch": "tsc --build --watch"
+    "build": "tsc",
+    "build:watch": "tsc --watch"
   },
   "dependencies": {
     "@proof-ui/babel-plugin": "link:../../plugins/babel",
