--- a/packages/storybook/tsconfig.json
+++ b/packages/storybook/tsconfig.json
@@ -4,9 +4,6 @@
 
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src",
-    "composite": true
-  },
-
-  "references": []
+    "rootDir": "./src"
+  }
 }
