--- a/plugins/add-all/package.json
+++ b/plugins/add-all/package.json
@@ -4,8 +4,8 @@
   "main": "dist/main.js",
   "license": "MIT",
   "scripts": {
-    "build": "tsc --build",
-    "build:watch": "tsc --build --watch"
+    "build": "tsc",
+    "build:watch": "tsc --watch"
   },
   "peerDependencies": {
     "@proof-ui/cli-plugin": "link:../../packages/cli-plugin",
