--- a/plugins/add-all/tsconfig.json
+++ b/plugins/add-all/tsconfig.json
@@ -4,13 +4,6 @@
 
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src",
-    "composite": true
-  },
-
-  "references": [
-    { "path": "../../packages/core" },
-    { "path": "../../packages/utils" },
-    { "path": "../../packages/cli-plugin" }
-  ]
+    "rootDir": "./src"
+  }
 }
