--- a/plugins/junit/tsconfig.json
+++ b/plugins/junit/tsconfig.json
@@ -4,9 +4,6 @@
 
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src",
-    "composite": true
-  },
-
-  "references": [{ "path": "../../packages/core" }]
+    "rootDir": "./src"
+  }
 }
