--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "release": "auto shipit -w"
   },
   "publishConfig": {
+    "access": "public",
     "registry": "https://registry.npmjs.org"
   },
   "author": "Adam Dierkens <Adam_Dierkens@intuit.com>",
