make it all public

--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -7,6 +7,10 @@
     "build": "tsc",
     "build:watch": "tsc --watch"
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
   "dependencies": {
     "@proof-ui/logger": "link:../logger",
     "@proof-ui/utils": "link:../utils",
