--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,6 +14,10 @@
     "promise-pool-executor": "^1.1.1",
     "tapable": "^1.1.3"
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
   "devDependencies": {
     "@types/tapable": "^1.0.4",
     "typescript": "3.5.3"
