--- a/packages/cli-plugin/package.json
+++ b/packages/cli-plugin/package.json
@@ -10,6 +10,10 @@
   "peerDependencies": {
     "command-line-application": "^0.1.8"
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
   "devDependencies": {
     "typescript": "3.5.3"
   }
