--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -12,6 +12,10 @@
     "@proof-ui/logger": "link:../logger",
     "cosmiconfig": "^5.2.1"
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
   "devDependencies": {
     "@types/cosmiconfig": "^5.0.3",
     "typescript": "3.5.3"
