--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -11,6 +11,10 @@
     "@types/signale": "^1.2.1",
     "signale": "^1.4.0"
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
   "devDependencies": {
     "typescript": "3.5.3"
   }
