--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -9,5 +9,9 @@
   },
   "devDependencies": {
     "typescript": "3.5.3"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
   }
 }
