--- a/plugins/add-all/package.json
+++ b/plugins/add-all/package.json
@@ -12,6 +12,10 @@
     "@proof-ui/core": "link:../../packages/core",
     "@proof-ui/utils": "link:../../packages/utils"
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
   "devDependencies": {
     "@proof-ui/core": "link:../../packages/core",
     "typescript": "3.5.3"
