--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,9 @@
 {
-  "packages": ["examples/*", "packages/*", "plugins/*"],
-  "version": "0.0.0",
+  "packages": [
+    "examples/*",
+    "packages/*",
+    "plugins/*"
+  ],
+  "version": "0.0.1",
   "npmClient": "yarn"
 }
