rename to proof-ui

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,4 +28,4 @@ jobs:
           yarn install --frozen-lockfile
       - name: Docs
         run: |
-          yarn lerna run deploy --scope @proof/docs --stream
+          yarn lerna run deploy --scope @proof-ui/docs --stream
