--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -26,6 +26,8 @@ jobs:
       - name: Install
         run: |
           yarn install --frozen-lockfile
+          git config --global user.email "adam@dierkens.com"
+          git config --global user.name "Adam Dierkens"
       - name: Docs
         run: |
           yarn lerna run deploy --scope @proof-ui/docs --stream
