--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -6,7 +6,7 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "declaration": true,
-    "lib": ["es6", "es2017", "dom"],
+    "lib": ["es2015", "es2016", "es2017", "dom", "es2018.promise"],
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "resolveJsonModule": true,
