--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -22,11 +22,10 @@
     "url-join": "4.0.1",
     "url-parse": "1.4.7",
     "webdriverio": "^4.14.0",
-    "@types/webdriverio": "^4.10.1"
+    "@types/webdriverio": "^4.10.1",
+    "@types/tapable": "^1.0.4"
   },
   "devDependencies": {
-    "@types/tapable": "^1.0.4",
-    "@types/webdriverio": "^4.10.1",
     "typescript": "3.5.3"
   }
 }
