--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proof-ui/browser",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "main": "dist/main.js",
   "license": "MIT",
   "scripts": {
@@ -14,16 +14,16 @@
   "dependencies": {
     "@proof-ui/logger": "link:../logger",
     "@proof-ui/utils": "link:../utils",
+    "@types/tapable": "^1.0.4",
     "@types/url-join": "4.0.0",
     "@types/url-parse": "1.4.3",
+    "@types/webdriverio": "^4.10.1",
     "progress": "^2.0.3",
     "selenium-standalone": "^6.16.0",
     "tapable": "^1.1.3",
     "url-join": "4.0.1",
     "url-parse": "1.4.7",
-    "webdriverio": "^4.14.0",
-    "@types/webdriverio": "^4.10.1",
-    "@types/tapable": "^1.0.4"
+    "webdriverio": "^4.14.0"
   },
   "devDependencies": {
     "typescript": "3.5.3"
