--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proof-ui/core",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "main": "dist/main.js",
   "license": "MIT",
   "scripts": {
@@ -11,9 +11,9 @@
     "@proof-ui/browser": "link:../browser",
     "@proof-ui/logger": "link:../logger",
     "@proof-ui/test": "link:../test",
+    "@types/tapable": "^1.0.4",
     "promise-pool-executor": "^1.1.1",
-    "tapable": "^1.1.3",
-    "@types/tapable": "^1.0.4"
+    "tapable": "^1.1.3"
   },
   "publishConfig": {
     "access": "public",
