--- a/plugins/junit/package.json
+++ b/plugins/junit/package.json
@@ -12,8 +12,8 @@
     "xmlbuilder": "^13.0.2"
   },
   "peerDependencies": {
-    "@proof-ui/cli-plugin": "link:../../packages/cli-plugin",
-    "@proof-ui/core": "link:../../packages/core"
+    "@proof-ui/cli-plugin": "*",
+    "@proof-ui/core": "*"
   },
   "publishConfig": {
     "access": "public",
