--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,6 +100,7 @@ workflows:
       - release:
           requires:
             - test
+            - lint
           filters:
             branches:
               only:
