--- a/plugins/applitools/package.json
+++ b/plugins/applitools/package.json
@@ -9,11 +9,14 @@
     "postbuild": "cpy 'src/types/*.d.ts' dist"
   },
   "dependencies": {
-    "@applitools/eyes-selenium": "4.28.1",
-    "@applitools/eyes.webdriverio": "^2.17.1"
+    "@applitools/eyes-selenium": "4.33.29",
+    "@applitools/eyes.webdriverio": "^2.12.6"
   },
   "peerDependencies": {
-    "@proof-ui/core": "*"
+    "@proof-ui/core": "*",
+    "@proof-ui/test": "*",
+    "@proof-ui/cli-plugin": "*",
+    "@proof-ui/logger": "*"
   },
   "publishConfig": {
     "access": "public",
@@ -21,7 +24,6 @@
   },
   "devDependencies": {
     "@proof-ui/core": "link:../../packages/core",
-    "cpy-cli": "3.1.0",
-    "typescript": "3.5.3"
+    "typescript": "3.8.3"
   }
 }
