--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "clean": "rm -rf ./packages/*/dist/* && rm -rf ./plugins/*/dist/* && lerna clean -y",
     "build": "lerna run build --stream",
     "build:watch": "lerna run build:watch --parallel",
-    "test": "jest --runInBand",
-    "lint": "xo",
+    "test": "jest",
+    "lint": "eslint plugins/**/*.ts packages/**/*.ts --ignore-pattern dist ",
     "release": "auto shipit -w"
   },
   "publishConfig": {
@@ -25,10 +25,9 @@
     "examples/*"
   ],
   "lint-staged": {
-    "*.{js,json,css,md,ts,tsx,jsx}": [
+    "*.{js,css,md,ts,tsx,jsx}": [
       "prettier --write",
-      "xo --fix",
-      "git add"
+      "eslint --ignore-pattern typings"
     ]
   },
   "husky": {
@@ -37,27 +36,24 @@
     }
   },
   "devDependencies": {
-    "@types/jest": "24.0.15",
-    "auto": "7.2.1",
-    "eslint-config-xo": "0.26.0",
-    "eslint-config-xo-react": "0.20.0",
-    "eslint-plugin-react": "7.14.2",
-    "eslint-plugin-react-hooks": "1.6.1",
-    "husky": "3.0.1",
-    "jest": "24.8.0",
-    "jest-junit": "7.0.0",
-    "lerna": "^3.15.0",
-    "lint-staged": "9.2.0",
-    "ts-jest": "24.0.2",
-    "typescript": "3.5.3",
-    "xo": "0.24.0"
+    "@design-systems/eslint-config": "1.4.8",
+    "@types/jest": "25.1.4",
+    "@typescript-eslint/parser": "2.25.0",
+    "auto": "9.21.0",
+    "eslint-plugin-no-explicit-type-exports": "0.10.11",
+    "husky": "4.2.3",
+    "jest": "25.2.3",
+    "jest-junit": "10.0.0",
+    "lerna": "^3.20.2",
+    "lint-staged": "10.0.9",
+    "prettier": "2.0.2",
+    "ts-jest": "25.2.1",
+    "typescript": "3.8.3"
   },
   "prettier": {
     "singleQuote": true
   },
-  "xo": {
-    "space": true,
-    "extends": "xo-react",
-    "prettier": true
+  "dependencies": {
+    "@types/got": "9.6.9"
   }
 }
