--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -14,18 +14,18 @@
   "dependencies": {
     "@proof-ui/logger": "link:../logger",
     "@proof-ui/utils": "link:../utils",
-    "@types/tapable": "^1.0.4",
+    "@types/tapable": "^1.0.5",
     "@types/url-join": "4.0.0",
     "@types/url-parse": "1.4.3",
-    "@types/webdriverio": "^4.10.1",
+    "chalk": "^3.0.0",
     "progress": "^2.0.3",
-    "selenium-standalone": "^6.16.0",
+    "selenium-standalone": "^6.17.0",
     "tapable": "^1.1.3",
     "url-join": "4.0.1",
     "url-parse": "1.4.7",
-    "webdriverio": "^4.14.0"
+    "webdriverio": "^5.22.4"
   },
   "devDependencies": {
-    "typescript": "3.5.3"
+    "typescript": "3.8.3"
   }
 }
