--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,15 +11,16 @@
     "@proof-ui/browser": "link:../browser",
     "@proof-ui/logger": "link:../logger",
     "@proof-ui/test": "link:../test",
-    "@types/tapable": "^1.0.4",
+    "@types/tapable": "^1.0.5",
     "promise-pool-executor": "^1.1.1",
-    "tapable": "^1.1.3"
+    "tapable": "^1.1.3",
+    "fast-glob": "^3.2.2"
   },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
   },
   "devDependencies": {
-    "typescript": "3.5.3"
+    "typescript": "3.8.3"
   }
 }
