--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -4,8 +4,8 @@
   "main": "dist/main.js",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
-    "build:watch": "tsc --watch"
+    "build": "tsc -b",
+    "build:watch": "npm run build -- -w"
   },
   "publishConfig": {
     "access": "public",
@@ -25,7 +25,5 @@
     "url-parse": "1.4.7",
     "webdriverio": "^5.22.4"
   },
-  "devDependencies": {
-    "typescript": "3.8.3"
-  }
+  "devDependencies": {}
 }
