--- a/packages/logger/tsconfig.json
+++ b/packages/logger/tsconfig.json
@@ -1,9 +1,11 @@
 {
-  "extends": "../../tsconfig.build.json",
-  "include": ["src/**/*.ts", "../../typings/**/*"],
+  "extends": "../../tsconfig.json",
+  "include": ["src/**/*", "../../typings/**/*"],
 
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src"
-  }
+    "rootDir": "./src",
+    "composite": true
+  },
+  "references": []
 }
