--- a/plugins/add-all/package.json
+++ b/plugins/add-all/package.json
@@ -4,8 +4,8 @@
   "main": "dist/main.js",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
-    "build:watch": "tsc --watch"
+    "build": "tsc -b",
+    "build:watch": "npm run build -- -w"
   },
   "peerDependencies": {
     "@proof-ui/cli-plugin": "*",
@@ -17,7 +17,6 @@
     "registry": "https://registry.npmjs.org"
   },
   "devDependencies": {
-    "@proof-ui/core": "link:../../packages/core",
-    "typescript": "3.8.3"
+    "@proof-ui/core": "link:../../packages/core"
   }
 }
