--- a/plugins/babel/tsconfig.json
+++ b/plugins/babel/tsconfig.json
@@ -1,9 +1,18 @@
 {
-  "extends": "../../tsconfig.build.json",
-  "include": ["src/**/*.ts", "../../typings/**/*"],
+  "extends": "../../tsconfig.json",
+  "include": ["src/**/*", "../../typings/**/*"],
 
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src"
-  }
+    "rootDir": "./src",
+    "composite": true
+  },
+  "references": [
+    {
+      "path": "../../packages/core"
+    },
+    {
+      "path": "../../packages/cli-plugin"
+    }
+  ]
 }
