--- a/plugins/console/package.json
+++ b/plugins/console/package.json
@@ -4,8 +4,8 @@
   "main": "dist/main.js",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
-    "build:watch": "tsc --watch"
+    "build": "tsc -b",
+    "build:watch": "npm run build -- -w"
   },
   "dependencies": {
     "chalk": "^3.0.0"
@@ -22,7 +22,6 @@
   },
   "devDependencies": {
     "@proof-ui/cli-plugin": "link:../../packages/cli-plugin",
-    "@proof-ui/core": "link:../../packages/core",
-    "typescript": "3.8.3"
+    "@proof-ui/core": "link:../../packages/core"
   }
 }
