--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,15 @@
 {
-  "extends": "./tsconfig.build.json",
   "compilerOptions": {
-    // Monorepo support
-    "baseUrl": ".",
-    "paths": {
-      "@proof-ui/*": ["packages/*/src", "plugins/*/src"]
-    }
+    "target": "ES2017",
+    "module": "commonjs",
+    "strict": true,
+    "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
+    "declaration": true,
+    "lib": ["es6", "es2017", "dom"],
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "resolveJsonModule": true,
+    "downlevelIteration": true
   }
 }
