dont set npm token right now

--- a/.autorc
+++ b/.autorc
@@ -1,6 +1,11 @@
 {
   "plugins": [
-    "npm",
+    [
+      "npm",
+      {
+        "setRcToken": false
+      }
+    ],
     "released"
   ],
   "labels": [
