move types after build for consistency

--- a/plugins/applitools/package.json
+++ b/plugins/applitools/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "prepublishOnly": "cp -r src/types/ dist/"
+    "postbuild": "cp -r src/types/ dist/"
   },
   "dependencies": {
     "@applitools/eyes-selenium": "4.28.1",
