--- a/plugins/babel/package.json
+++ b/plugins/babel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proof-ui/babel-plugin",
-  "version": "0.0.19",
+  "version": "0.0.20-0",
   "main": "dist/main.js",
   "license": "MIT",
   "scripts": {
