--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -23,7 +23,7 @@
     "tapable": "^1.1.3",
     "url-join": "4.0.1",
     "url-parse": "1.4.7",
-    "webdriverio": "^5.22.4"
+    "webdriverio": "6.1.22"
   },
   "devDependencies": {}
 }
