--- a/plugins/babel/package.json
+++ b/plugins/babel/package.json
@@ -9,8 +9,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.9.0",
-    "@babel/register": "^7.9.0",
-    "babel-preset-power-assert": "^3.0.0"
+    "@babel/register": "^7.9.0"
   },
   "peerDependencies": {
     "@proof-ui/core": "*"
